# Studies

./: README.md
.NET/: LICENSE  README.md
.NET/HOMM/: Users.db
BD - projekt/: .gitignore  README.md
BD - projekt/ZarzadzanieFlota/: App.config  Autorization.Designer.cs  Autorization.cs  BaseForm.Designer.cs  BaseForm.cs  ChoosingProffesion.Designer.cs  ChoosingProffesion.cs  Confirmation.Designer.cs  Confirmation.cs  FormChanging.cs  Program.cs  PublicTransportDataSet.Designer.cs  PublicTransportDataSet.xsd  (+6 more)
BIAI - project/: README.md
DGM - laboratorium/: README.md
IO - projekt/: .gitignore  README.md
IwSK - laboratorium-projekt/: README.md
IwSK - laboratorium-projekt/Lab1_Projekt/IWSK2/: ASCIImodbus.cpp  ASCIImodbus.h  CMakeLists.txt  IWSK2.pro  RS232.cpp  RS232.h  emptyMessageException.cpp  emptyMessageException.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  master.cpp  master.h  master.ui  slave.cpp  slave.h  slave.ui
IwSK - laboratorium-projekt/Lab1_Projekt/rs232/: CMakeLists.txt  IWSK1.pro  RS232.cpp  RS232.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  transmition.cpp  transmition.h  transmition.ui
Ja - projekt/: CHANGELOG.txt  README.md
Jium - laboratoria i projekt/: .gitignore  README.md
PGK - laboratorium/: README.md
PK2 - laboratoria i projekt/: README.md
PK3 - laboratoria i projekt/: README.md
PK4 - projekt/: README.md
PwAG - laboratorium i projekt/: README.md
Pwsgu - laboratorium-projekt/: README.md
SMiW - projekt/: .gitignore  README.md
SWiRR - projekt/: README.md
ZTPGK - laboratorium/: README.md
(+1129 files in other folders)
